test/rewriter/errors/pat_unsupported_payload.ml
let unsupported_payload = function
  | [%yojson? Ok ()] -> false
  | _ -> true
